# codebrains-todo-actix

./: .env  .gitignore  Cargo.toml  README.md
entity/src/: todo.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_todo_table.rs
src/: main.rs
src/api/: todo_api.rs
src/entity/: mod.rs  todo.rs
src/handler/: todos.rs
src/repository/: todos.rs
