[package]
name = "codebrains-todo-actix"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "entity", "migration"]

[dependencies]
actix-web = "4"
actix-cors = "^0.6"
dotenv = "^0.15"
sea-orm = { version = "0.9.2", features = [ "sqlx-postgres", "runtime-actix-native-tls", "macros" ] }
async-std = { version = "^1", features = ["attributes", "tokio1"] }
serde = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
entity = { path = "entity" }
migration = { path = "migration" }

[dependencies.sea-orm-migration]
version = "^0"
features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  # e.g.
  "runtime-actix-native-tls",  # `ASYNC_RUNTIME` feature
  "sqlx-postgres",         # `DATABASE_DRIVER` feature
]